@@ -90,7 +90,8 @@ modules_webkdc_mod_webkdc_la_LDFLAGS = -module -shared -avoid-version \
 modules_webkdc_mod_webkdc_la_LIBADD = lib/libwebauth.la $(APACHE_LIBS)
 
 bin_PROGRAMS = tools/wa_keyring
-tools_wa_keyring_LDADD = lib/libwebauth.la $(CRYPTO_LIBS)
+tools_wa_keyring_LDADD = lib/libwebauth.la util/libutil.la \
+	portable/libportable.la $(CRYPTO_LIBS)
 dist_man_MANS = tools/wa_keyring.1
 
 # Only install the WebLogin script and configuration if configured to build
