@@ -1,182 +1,180 @@
 /*
  * Command-line utility for manipulating WebAuth keyrings.
  *
- * Written by Roland Schemers
- * Copyright 2002, 2003, 2006, 2009
+ * Written by Roland Schemers and Russ Allbery
+ * Copyright 2002, 2003, 2006, 2009, 2010
  *     Board of Trustees, Leland Stanford Jr. University
  *
  * See LICENSE for licensing terms.
  */
 
-#include "config.h"
+#include <config.h>
+#include <portable/stdbool.h>
+#include <portable/system.h>
 
-#include <stdio.h>
-
-#ifdef HAVE_STDLIB_H
-#include <stdlib.h>
-#endif
-
-#ifdef HAVE_STRING_H
-#include <string.h>
-#endif
-
-#ifdef HAVE_UNISTD_H
-#include <unistd.h>
-#endif
-
+#include <assert.h>
+#include <errno.h>
 #include <openssl/md5.h>
 
 #include <lib/webauth.h>
+#include <util/messages.h>
+#include <util/xmalloc.h>
 
-#define BUFSIZE 4096
-#define MAX_ATTRS 128
+/* Usage message. */
+static const char usage_message[] = "\
+Usage: %s [-hv] -f <keyring> list\n\
+       %s -f <keyring> add <valid-after>\n\
+       %s -f <keyring> gc <oldest-valid-after-to-keep>\n\
+       %s -f <keyring> remove <id>\n\
+\n\
+Functions:\n\
+  add <valid-after>                 # add a new random key\n\
+  gc <oldest-valid-after-to-keep>   # garbage collect old keys\n\
+  list                              # list keys\n\
+  remove <id>                       # remove key by id\n\
+\n\
+<valid_after> and <oldest-valid-after-to-keep> use the format\n\
+[-]<nnnn>[s|m|h|d|w], indicating a time relative to the current time.  The\n\
+units for the time are specified by appending a single letter, which can\n\
+be s, m, h, d, or w, corresponding to seconds minutes, hours, days, and\n\
+weeks, respectively.  For example, 10d is 10 days from the current time,\n\
+and -60d is 60 days before the current time.  Negative relative times are\n\
+useful with gc.\n";
 
 
 /*
- * GLOBALS
+ * Die with an error, appending a WebAuth error message.  Tries to follow the
+ * interface and behavior of the messages library as closely as possible.
  */
-static const char *prog = "wa_keyring";
-static int verbose = 0;
-static const char *keyring_path = NULL;
-
 static void
-croak(int s)
+die_webauth(int s, const char *fmt, ...)
 {
-    fprintf(stderr, "%s: error code %d: %s\n", prog, s, webauth_error_message(s));
-    exit(1);
+    va_list args;
+
+    if (message_program_name != NULL)
+        fprintf(stderr, "%s: ", message_program_name);
+    va_start(args, fmt);
+    vfprintf(stderr, fmt, args);
+    if (s != 0)
+        fprintf(stderr, ": %s", webauth_error_message(s));
+    fprintf(stderr, "\n");
+    exit(message_fatal_cleanup ? (*message_fatal_cleanup)() : 1);
 }
 
+
+/*
+ * Display the usage message for remctl.
+ */
 static void
-usage(int exitcode)
+usage(int status)
 {
-    fprintf(stderr, "\n");
-    fprintf(stderr, "usage: %s -f {keyring} [add|list|remove] ...\n", prog);
-    fprintf(stderr, "  -f {keyring} keyring file to use\n");
-    fprintf(stderr, "  -h           help\n");
-    fprintf(stderr, "  -v           verbose listing\n");
-    fprintf(stderr, "\n");
-    fprintf(stderr, "  add {valid_after}                 # add a new key\n");
-    fprintf(stderr, "  gc {oldest-valid-after-to-keep}   # garbage collect\n");
-    fprintf(stderr, "  list                              # list keys\n");
-    fprintf(stderr, "  remove {id}                       # remove key by id\n");
-    fprintf(stderr, "\n");
-    fprintf(stderr, "valid_after/oldest-valid-after-to-keep use the format: nnnn[s|m|h|d|w]\n");
-    fprintf(stderr, "which indicates a time relative to the current time. The units for the time\n");
-    fprintf(stderr, "are specified by appending a single letter, which can either be s, m, h, d,\n");
-    fprintf(stderr, "or w, which correspond to seconds, minutes, hours, days, and weeks\n");
-    fprintf(stderr, "respectively. For example: 10d is 10 days from the current time,\n");
-    fprintf(stderr, "and -60d is 60 days before the current time (negative realative times\n");
-    fprintf(stderr, "are useful with gc).\n");
-    fprintf(stderr, "\n");
-    exit(exitcode);
+    fprintf((status == 0) ? stdout : stderr, usage_message,
+            message_program_name, message_program_name, message_program_name,
+            message_program_name);
+    exit(status);
 }
 
-static int
+
+/*
+ * Convert a time value to seconds, supporting a single character for units.
+ * s, m, h, d, and w are the supported units, representing seconds, minutes,
+ * hours, days, and weeks respectively.
+ */
+static long
 seconds(const char *value)
 {
-    char temp[32];
-    unsigned int mult = 0;
-    size_t len;
-    
-    len = strlen(value);
-    if (len > (sizeof(temp)-1)) {
-        fprintf(stderr, "error: invalid units specified: %s", value);
-        usage(1);
+    long n;
+    long multiplier = 0;
+    char *end;
+
+    assert(value != NULL);
+    if (*value == '\0')
+        die("invalid empty time value");
+
+    switch (value[strlen(value) - 1]) {
+    case 's':
+        multiplier = 1;
+        break;
+    case 'm':
+        multiplier = 60;
+        break;
+    case 'h':
+        multiplier = 60 * 60;
+        break;
+    case 'd':
+        multiplier = 60 * 60 * 24;
+        break;
+    case 'w':
+        multiplier = 60 * 60 * 24 * 7;
+        break;
+    default:
+        die("invalid time specification: %s", value);
+        break;
     }
 
-    strcpy(temp, value);
-
-    switch(temp[len-1]) {
-        case 's': 
-            mult = 1;
-            break;
-        case 'm':
-            mult = 60;
-            break;
-        case 'h': 
-            mult = 60*60; 
-            break;
-        case 'd': 
-            mult = 60*60*24; 
-            break;
-        case 'w': 
-            mult = 60*60*24*7; 
-            break;
-        default:
-            fprintf(stderr, "error: invalid units specified: %s", value);
-            usage(1);
-            break;
-    }
-    
-    temp[len-1] = '\0';
-    return atoi(temp) * mult;
+    errno = 0;
+    n = strtol(value, &end, 10);
+    if (errno != 0 || end != value + strlen(value) - 1)
+        die("invalid time specification: %s", value);
+    return n * multiplier;
 }
 
-static char **
-read_options(int argc, char **argv)
-{
-  prog = argv[0];
 
-  while (--argc && *++argv && argv[0][0] == '-') {
-      switch (argv[0][1]) {
-          case 'h':
-              usage(0);
-              break;
-          case  'v':
-              verbose = 1;
-              break;
-          case 'f':
-              keyring_path = *++argv;
-              break;
-          default:
-              usage(1);
-              break;
-      }
-  }
-
-  if (keyring_path == NULL || argv == NULL) {
-      usage(1);
-  }
-
-  return argv;
-}
-
+/*
+ * Given a time_t, print it to standard output in the local time zone using
+ * the ISO date and time representation but without the time zone.
+ */
 static void
 print_time(time_t t)
 {
     struct tm *tm;
-    char buff[128];
+    char buf[128];
+
     tm = localtime(&t);
-    strftime(buff, sizeof(buff), "%m/%d/%Y %H:%M:%S", tm);
-    printf("%s", buff);
+    strftime(buf, sizeof(buf), "%Y-%m-%d %H:%M:%S", tm);
+    printf("%s", buf);
 }
 
-static void
-get_fingerprint(WEBAUTH_KEY *key, char *hex, size_t hex_len)
-{
-    unsigned char md5[MD5_DIGEST_LENGTH]; 
-    size_t len;
-    int s;
 
-    MD5_CTX c;
-    MD5_Init(&c);
-    MD5_Update(&c, key->data, key->length);
-    MD5_Final(md5, &c);
- 
-    s = webauth_hex_encode((char *) md5, MD5_DIGEST_LENGTH, hex, &len,
-                           hex_len);
-    hex[len] = '\0';
-}
-
+/*
+ * Given a WebAuth key, print a fingerprint of that key to standard output.
+ * The fingerprint is the MD5 checksum of the key.  This is used to check
+ * whether two keys are the same without exposing the actual key value.
+ */
 static void
 print_fingerprint(WEBAUTH_KEY *key)
 {
-    char hex[MD5_DIGEST_LENGTH*2+1];
+    char md5[MD5_DIGEST_LENGTH];
+    char *hex;
+    size_t length, maxlen;
+    int s;
+    MD5_CTX c;
 
-    get_fingerprint(key, hex, sizeof(hex));
+    MD5_Init(&c);
+    MD5_Update(&c, key->data, key->length);
+    MD5_Final((unsigned char *) md5, &c);
+    maxlen = webauth_hex_encoded_length(MD5_DIGEST_LENGTH);
+    hex = xmalloc(maxlen + 1);
+    s = webauth_hex_encode(md5, MD5_DIGEST_LENGTH, hex, &length, maxlen);
+    if (s != WA_ERR_NONE)
+        die_webauth(s, "cannot encode fingerprint of key");
+    hex[length] = '\0';
     printf("%s", hex);
+    free(hex);
 }
 
+
+/*
+ * Given a keyring entry, print it in the short format.  Each entry will look
+ * like:
+ *
+ *     0  2009-06-27 15:29:19  2009-06-27 15:29:19  <fingerprint>
+ *
+ * where the first column is the id, the next is the creation timestamp, the
+ * third is the date at which the key becomes valid, and the last is the MD5
+ * fingerprint of the key.  Takes the keyring entry and its index, which is
+ * used as the key ID.
+ */
 static void
 print_short(WEBAUTH_KEYRING_ENTRY *e, size_t i)
 {
@@ -190,6 +188,19 @@ print_short(WEBAUTH_KEYRING_ENTRY *e, size_t i)
 }
 
 
+/*
+ * Given a keyring entry, print it in the long format.  Each entry will look
+ * like:
+ *
+ *          Key-Id: 0
+ *         Created: 2009-06-27 15:29:19
+ *     Valid-After: 2009-06-27 15:29:19
+ *        Key-Type: 1 (AES)
+ *      Key-Length: 16 (128 bits)
+ *     Fingerprint: 23e59c1d193113afc9d0257f42a64369
+ *
+ * Takes the keyring entry and its index, which is used as the key ID.
+ */
 static void
 print_long(WEBAUTH_KEYRING_ENTRY *e, size_t i)
 {
@@ -202,68 +213,61 @@ print_long(WEBAUTH_KEYRING_ENTRY *e, size_t i)
     printf("\n");
     printf("     Key-Type: %d (", e->key->type);
     switch (e->key->type) {
-        case WA_AES_KEY:
-            printf("AES");
-            break;
-        default:
-            printf("UNKNOWN");
-            break;
+    case WA_AES_KEY:
+        printf("AES");
+        break;
+    default:
+        printf("UNKNOWN");
+        break;
     }
     printf(")\n");
-    printf("   Key-Length: %d (%d bits)\n",
-           e->key->length, e->key->length*8);
+    printf("   Key-Length: %d bits\n", e->key->length * 8);
     printf("  Fingerprint: ");
     print_fingerprint(e->key);
     printf("\n\n");
 }
 
+
 /*
-  default:
-
-  ------------------------------------------------------------
-  Path: webauth_keyring
-
-  Created           Valid after        Fingerprint
-  10/16/02 12:25:11 10/16/02 22:25:11  85e6 d033 0f87 b1d9 89b7 4fe2 a239 f990
-  ------------------------------------------------------------
-
-  verbose:
-
-  ------------------------------------------------------------
-         Path: webauth_keyring
-      Version: 1
-         Keys: 1
-
-       Key-Id: 0
-      Created: 10/16/02 12:25:03
-  Valid-After: 10/16/02 12:25:03
-     Key-Type: 1 (AES)
-   Key-Length: 16 (128 bits)
-  Fingerprint: 85E6 D033 0F87 B1D9 89B7 4FE2 A239 F990
-
-  ------------------------------------------------------------
-     */
-
+ * List the entries in the keyring.  The default output format looks like:
+ *
+ *     Path: webauth_keyring
+ *
+ *     id  Created              Valid after          Fingerprint
+ *      0  2009-06-27 15:29:19  2009-06-27 15:29:19  23e59c1d193113afc9...
+ *
+ * If the verbose flag is true, the output will instead look like:
+ *
+ *             Path: keyring
+ *         Num-Keys: 1
+ *
+ *           Key-Id: 0
+ *          Created: 2009-06-27 15:29:19
+ *      Valid-After: 2009-06-27 15:29:19
+ *         Key-Type: 1 (AES)
+ *       Key-Length: 128 bits
+ *      Fingerprint: 23e59c1d193113afc9d0257f42a64369
+ *
+ * Takes the path to the keyring and the verbose flag.
+ */
 static void
-list_keyring(void)
+list_keyring(const char *keyring, bool verbose)
 {
     WEBAUTH_KEYRING *ring;
     int s;
     size_t i;
-    
-    s = webauth_keyring_read_file(keyring_path, &ring);
-    if (s != WA_ERR_NONE)
-        croak(s);
 
+    s = webauth_keyring_read_file(keyring, &ring);
+    if (s != WA_ERR_NONE)
+        die_webauth(s, "cannot read keyring %s", keyring);
     if (verbose) {
-        printf("         Path: %s\n", keyring_path);
+        printf("         Path: %s\n", keyring);
         printf("     Num-Keys: %d\n\n", ring->num_entries);
     } else {
-        printf("Path: %s\n", keyring_path);
+        printf("Path: %s\n", keyring);
         printf("\n");
         printf("id  Created              Valid after          Fingerprint\n");
     }
-
     for (i = 0; i < ring->num_entries; i++)
         if (verbose)
             print_long(&ring->entries[i], i);
@@ -272,136 +276,157 @@ list_keyring(void)
     webauth_keyring_free(ring);
 }
 
+
+/*
+ * Add a new key to a keyring.  Takes the path to the keyring and the offset
+ * in seconds at which the new key should become valid.
+ */
 static void
-add_key(char *valid_after)
+add_key(const char *keyring, long valid_after)
 {
     WEBAUTH_KEY *key;
     WEBAUTH_KEYRING *ring;
     int s;
+    time_t now;
     char key_material[WA_AES_128];
-    time_t curr, vf;
-    
-    s = webauth_keyring_read_file(keyring_path, &ring);
-    if (s != WA_ERR_NONE) {
+
+    s = webauth_keyring_read_file(keyring, &ring);
+    if (s != WA_ERR_NONE)
         ring = webauth_keyring_new(32);
-    }
-    
     s = webauth_random_key(key_material, WA_AES_128);
     if (s != WA_ERR_NONE)
-        croak(s);
-
+        die_webauth(s, "cannot generate new random key");
     key = webauth_key_create(WA_AES_KEY, key_material, WA_AES_128);
-
-    time(&curr);
-
-    vf = seconds(valid_after);
-
-    s = webauth_keyring_add(ring, curr, curr+vf, key);
+    now = time(NULL);
+    s = webauth_keyring_add(ring, now, now + valid_after, key);
     if (s != WA_ERR_NONE)
-        croak(s);
-
+        die_webauth(s, "cannot add new key to the keyring");
     webauth_key_free(key);
-
-    s = webauth_keyring_write_file(ring, keyring_path);
+    s = webauth_keyring_write_file(ring, keyring);
     if (s != WA_ERR_NONE)
-        croak(s);
-
+        die_webauth(s, "cannot write keyring to %s", keyring);
     webauth_keyring_free(ring);
 }
 
+
+/*
+ * Remove a key from a keyring.  Takes the index in the keyring of the key to
+ * remove.
+ */
 static void
-remove_key(int index)
+remove_key(const char *keyring, unsigned long index)
 {
     WEBAUTH_KEYRING *ring;
     int s;
-    
-    s = webauth_keyring_read_file(keyring_path, &ring);
-    if (s != WA_ERR_NONE) {
-        croak(s);
-    }
 
-    s = webauth_keyring_remove(ring, index);
-    if (s != WA_ERR_NONE) {
-        croak(s);
-    }
-
-    s = webauth_keyring_write_file(ring, keyring_path);
+    s = webauth_keyring_read_file(keyring, &ring);
     if (s != WA_ERR_NONE)
-        croak(s);
-
+        die_webauth(s, "cannot read keyring %s", keyring);
+    s = webauth_keyring_remove(ring, index);
+    if (s != WA_ERR_NONE)
+        die_webauth(s, "cannot remove key %lu from keyring", index);
+    s = webauth_keyring_write_file(ring, keyring);
+    if (s != WA_ERR_NONE)
+        die_webauth(s, "cannot write keyring to %s", keyring);
     webauth_keyring_free(ring);
 }
 
 
+/*
+ * Garbage-collect the keys in the keyring.  Any key whose valid-after date is
+ * older than the current time adjusted by the offset passed in to gc_keys is
+ * removed from the keyring.
+ */
 static void
-gc_keys(char *oldest_valid_after)
+gc_keys(const char *keyring, long offset)
 {
     WEBAUTH_KEYRING *ring;
-    int s, removed;
+    int s;
+    bool removed;
     size_t i;
-    time_t curr, ovf;
+    time_t now, earliest;
 
-    s = webauth_keyring_read_file(keyring_path, &ring);
-    if (s != WA_ERR_NONE) {
-        croak(s);
-    }
-
-    time(&curr);
-    ovf = curr+seconds(oldest_valid_after);
-
-    do {
-        removed = 0;
-        for (i = 0; i < ring->num_entries; i++) {
-            if (ring->entries[i].valid_after < ovf) {
-                s = webauth_keyring_remove(ring, i);
-                if (s != WA_ERR_NONE) {
-                    croak(s);
-                }
-                removed = 1;
-            }
-        }
-    } while (removed);
-
-    s = webauth_keyring_write_file(ring, keyring_path);
+    s = webauth_keyring_read_file(keyring, &ring);
     if (s != WA_ERR_NONE)
-        croak(s);
+        die_webauth(s, "cannot read keyring %s", keyring);
+    now = time(NULL);
+    earliest = now + offset;
+    do {
+        removed = false;
+        for (i = 0; i < ring->num_entries; i++)
+            if (ring->entries[i].valid_after < earliest) {
+                s = webauth_keyring_remove(ring, i);
+                if (s != WA_ERR_NONE)
+                    die_webauth(s, "cannot remove key %lu from keyring", i);
+                removed = true;
+            }
+    } while (removed);
+    s = webauth_keyring_write_file(ring, keyring);
+    if (s != WA_ERR_NONE)
+        die_webauth(s, "cannot write keyring to %s", keyring);
     webauth_keyring_free(ring);
 }
+
 
 int
 main(int argc, char **argv)
 {
-    const char *cmd = NULL;
+    int option;
+    bool verbose;
+    unsigned long id;
+    long offset;
+    char *end;
+    const char *keyring = NULL;
+    const char *command = "list";
 
-    argv = read_options(argc, argv);
-
-    if (!*argv) {
-        cmd = "list";
-    } else {
-        cmd = *argv++;
+    message_program_name = argv[0];
+    while ((option = getopt(argc, argv, "f:hv")) != EOF) {
+        switch (option) {
+        case 'f':
+            keyring = optarg;
+            break;
+        case 'h':
+            usage(0);
+            break;
+        case 'v':
+            verbose = true;
+            break;
+        default:
+            usage(1);
+            break;
+        }
+    }
+    argc -= optind;
+    argv += optind;
+    if (keyring == NULL || argc > 2)
+        usage(1);
+    if (argc > 0) {
+        command = argv[0];
+        argv++;
     }
 
-    if (strcmp(cmd, "list") == 0) {
-        if (*argv) usage(1);
-        list_keyring();
-    } else if (strcmp(cmd, "add") == 0) {
-        char *valid_after;
-        if (!*argv) usage(1);
-        valid_after = *argv++;
-        if (*argv) usage(1);
-        add_key(valid_after);
-    } else if (strcmp(cmd, "gc") == 0) {
-        char *oldest_valid_after;
-        if (!*argv) usage(1);
-        oldest_valid_after = *argv++;
-        if (*argv) usage(1);
-        gc_keys(oldest_valid_after);
-    } else if (strcmp(cmd, "remove") == 0) {
-        int id;
-        if (!*argv) usage(1);
-        id = atoi(*argv++);
-        if (*argv) usage(1);
-        remove_key(id);
+    if (strcmp(command, "list") == 0) {
+        if (argc > 0)
+            usage(1);
+        list_keyring(keyring, verbose);
+    } else if (strcmp(command, "add") == 0) {
+        if (argc != 1)
+            usage(1);
+        offset = seconds(argv[0]);
+        add_key(keyring, offset);
+    } else if (strcmp(command, "gc") == 0) {
+        if (argc != 1)
+            usage(1);
+        offset = seconds(argv[0]);
+        gc_keys(keyring, offset);
+    } else if (strcmp(command, "remove") == 0) {
+        if (argc != 1)
+            usage(1);
+        errno = 0;
+        id = strtoul(argv[0], &end, 10);
+        if (errno != 0 || *end != '\0')
+            die("invalid key id: %s", argv[0]);
+        remove_key(keyring, id);
     } else {
         usage(1);
     }
