@@ -21,6 +21,9 @@ WebAuth 3.6.3 (unreleased)
     alternate URL to attempt REMOTE_USER authentication in WebLogin.
     Patch from Ian Ward Comfort.
 
+    The timestamps output by wa_keyring list now contain dates in the ISO
+    format YYYY-MM-DD instead of the US-centric and ambiguous MM/DD/YYYY.
+
     Change the libwebauth API to use size_t and other data types more
     correctly instead of always using int.  This will require updates in
     all calling applications.
